--- a/src/resources/fonts/_fonts.scss
+++ b/src/resources/fonts/_fonts.scss
@@ -1,19 +1,12 @@
 @font-face {
-    font-family: "Helvetica Neue Regular";
-    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.ttf") format("truetype");
+    font-family: "Helvetica Neue";
+    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.ttf"), format("truetype"), font-weight(400);
+    src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.ttf") format("truetype"), font-weight(500);
+    src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.ttf") format("truetype"), font-weight(700);
 }
 
 @font-face {
-    font-family: "Helvetica Neue Medium";
-    src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Helvetica Neue Bold";
-    src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Lato Regular";
-    src: local("LatoRegular"), url("./LatoRegular.ttf") format("truetype");
+    font-family: "Lato";
+    src: local("LatoRegular"), url("./LatoRegular.ttf") format("truetype"), font-weight(400);
+    ;
 }
