--- a/src/resources/fonts/_fonts.scss
+++ b/src/resources/fonts/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Helvetica Neue";
-    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.ttf"), format("truetype"), font-weight(400);
+    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.ttf") format("truetype"), font-weight(400);
     src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.ttf") format("truetype"), font-weight(500);
     src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.ttf") format("truetype"), font-weight(700);
 }
