--- a/src/components/Footer/Copyright/Copyright.scss
+++ b/src/components/Footer/Copyright/Copyright.scss
@@ -1,4 +1,6 @@
 .copyright {
+    margin-top: 84px;
+    margin-left: 349px;
     color: var(--additional-dark, #3B5266);
     font-family: Lato;
     font-size: 17px;
