--- a/src/components/Footer/SocialNetwork/SocialNetwork.scss
+++ b/src/components/Footer/SocialNetwork/SocialNetwork.scss
@@ -1,4 +1,6 @@
 .social-networks {
+    margin-top: 191px;
+    margin-left: 232px;
     display: inline-flex;
     flex-direction: row;
     gap: 40px;
