--- a/src/components/Footer/Subscribe/Subscribe.scss
+++ b/src/components/Footer/Subscribe/Subscribe.scss
@@ -1,4 +1,5 @@
 .subscribe {
+    margin-top: 40px;
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +7,11 @@
     gap: 24px;
 
     .label {
+        width: 190px;
+
         .btn {
+            width: 190px;
+            height: 26px;
             color: var(--black, #232632);
             font-variant-numeric: lining-nums proportional-nums;
             font-family: 'Helvetica Neue';
@@ -20,6 +25,7 @@
             text-align: center;
             text-decoration: none;
             border: none;
+            padding: 0;
         }
     }
 
@@ -81,6 +87,7 @@
                     font-weight: 400;
                     line-height: 22px;
                     border: none;
+                    text-decoration: none;
                 }
 
                 .adornment {
