--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,16 +4,43 @@
     width: 1440px;
     height: 610px;
     flex-shrink: 0;
+    z-index: 2;
+
+    .delimiter {
+        position: absolute;
+        width: 1440px;
+        height: 2px;
+        flex-shrink: 0;
+        z-index: 2;
+
+        path {
+            fill: var(--grey, #EBEDF2);
+        }
+    }
 
     .left {
         margin-top: 61px;
         margin-left: 150px;
         display: inline-flex;
         flex-direction: column;
+        z-index: 2;
     }
 
     .right {
         display: inline-flex;
         flex-direction: column;
+        z-index: 2;
+    }
+
+    .background {
+        position: absolute;
+        width: 1440px;
+        height: 610px;
+        flex-shrink: 0;
+        z-index: 1;
+
+        path {
+            fill: var(--white, #FFF);
+        }
     }
 }
