--- a/src/Application.scss
+++ b/src/Application.scss
@@ -1,7 +1,33 @@
-@import "./resources/fonts/fonts";
+@import "./variables";
 
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+
+body {
+    background: var(--dark-2, #191B23);
+}
+
+h1 {
+    font-family: $helveticaNeueFont;
+}
+
+h2 {
+    color: var(--white, #FFF);
+    font-feature-settings: 'clig' off, 'liga' off;
+
+    /* H2 */
+    font-family: $helveticaNeueFont;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 48px;
+    /* 120% */
+}
+
+.thin-block-border {
+    border-radius: 10px;
+    border: 1.4px solid var(--white, rgb(255, 255, 255, .2));
 }
