--- a/src/resources/fonts/_fonts.scss
+++ b/src/resources/fonts/_fonts.scss
@@ -1,12 +1,13 @@
 @font-face {
     font-family: "Helvetica Neue";
-    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.ttf") format("truetype"), font-weight(400);
-    src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.ttf") format("truetype"), font-weight(500);
-    src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.ttf") format("truetype"), font-weight(700);
+    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.ttf") format("truetype");
+    src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.ttf") format("truetype");
+    src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.ttf") format("truetype");
+    font-weight: 400, 500, 700;
 }
 
 @font-face {
     font-family: "Lato";
-    src: local("LatoRegular"), url("./LatoRegular.ttf") format("truetype"), font-weight(400);
-    ;
+    src: local("LatoRegular"), url("./LatoRegular.ttf") format("truetype");
+    font-weight: 400;
 }
