--- a/src/resources/fonts/_fonts.scss
+++ b/src/resources/fonts/_fonts.scss
@@ -1,9 +1,19 @@
 @font-face {
     font-family: "Helvetica Neue";
-    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.ttf") format("truetype");
-    src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.ttf") format("truetype");
-    src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.ttf") format("truetype");
-    font-weight: 400, 500, 700;
+    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.otf") format("opentype");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Helvetica Neue";
+    src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.otf") format("opentype");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Helvetica Neue";
+    src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.otf") format("opentype");
+    font-weight: 700;
 }
 
 @font-face {
