--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,14 +1,14 @@
 .footer {
     display: inline-flex;
     flex-direction: row;
-    width: 1440px;
+    width: 100%;
     height: 610px;
     flex-shrink: 0;
     z-index: 2;
 
     .delimiter {
         position: absolute;
-        width: 1440px;
+        width: 100%;
         height: 2px;
         flex-shrink: 0;
         z-index: 2;
@@ -34,8 +34,8 @@
 
     .background {
         position: absolute;
-        width: 1440px;
-        height: 610px;
+        width: 100%;
+        height: 100%;
         flex-shrink: 0;
         z-index: 1;
 
