--- a/src/components/Footer/components/Links/Links.scss
+++ b/src/components/Footer/components/Links/Links.scss
@@ -7,9 +7,8 @@
     word-spacing: 16.5px;
     color: #000;
     font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Helvetica Neue;
+    font-family: 'Helvetica Neue';
     font-size: 20px;
-    font-style: normal;
     font-weight: 400;
     line-height: 32px;
 }
