--- a/src/pages/Welcome/components/SignUp/SignUp.scss
+++ b/src/pages/Welcome/components/SignUp/SignUp.scss
@@ -9,14 +9,10 @@
     .h2 {
         color: var(--black, #232632);
         font-feature-settings: 'clig' off, 'liga' off;
-
-        /* H2 */
-        font-family: Helvetica Neue;
+        font-family: 'Helvetica Neue';
         font-size: 40px;
-        font-style: normal;
         font-weight: 500;
         line-height: 48px;
-        /* 120% */
     }
 
     .button {
@@ -46,14 +42,10 @@
             color: var(--white, #FFF);
             text-align: right;
             font-feature-settings: 'clig' off, 'liga' off;
-
-            /* text_big */
             font-family: 'Helvetica Neue';
             font-size: 20px;
-            font-style: normal;
             font-weight: 400;
             line-height: 32px;
-            /* 160% */
         }
     }
 
@@ -112,14 +104,10 @@
                 color: var(--black, #232632);
                 text-align: right;
                 font-feature-settings: 'clig' off, 'liga' off;
-
-                /* text_big */
-                font-family: Helvetica Neue;
+                font-family: 'Helvetica Neue';
                 font-size: 20px;
-                font-style: normal;
                 font-weight: 400;
                 line-height: 32px;
-                /* 160% */
             }
         }
 
@@ -146,11 +134,8 @@
                 color: var(--black, #232632);
                 text-align: right;
                 font-feature-settings: 'clig' off, 'liga' off;
-
-                /* text_big */
-                font-family: Helvetica Neue;
+                font-family: 'Helvetica Neue';
                 font-size: 20px;
-                font-style: normal;
                 font-weight: 400;
                 line-height: 32px;
                 /* 160% */
@@ -169,11 +154,8 @@
             color: var(--gray-3, #828282);
             text-align: center;
             font-variant-numeric: lining-nums proportional-nums;
-
-            /* text */
             font-family: 'Helvetica Neue';
             font-size: 14px;
-            font-style: normal;
             font-weight: 400;
             line-height: 22px;
 
