--- a/src/components/Footer/components/Trust/Trust.scss
+++ b/src/components/Footer/components/Trust/Trust.scss
@@ -1,3 +1,5 @@
+$color-gray-3: var(--gray-3, #828282);
+
 .trust {
     width: 303px;
     margin-top: 73px;
@@ -8,7 +10,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 22px;
-    color: var(--gray-3, #828282);
+    color: $color-gray-3;
     font-variant-numeric: lining-nums proportional-nums;
 
     .text-1 {
