--- a/src/pages/Welcome/components/SignUp/SignUp.scss
+++ b/src/pages/Welcome/components/SignUp/SignUp.scss
@@ -1,3 +1,10 @@
+$font-family: 'Helvetica Neue';
+$color-black: var(--black, #232632);
+$color-white: var(--white, #FFF);
+$color-purple: var(--purple, #7B61FF);
+$color-gray: var(--grey, #EBEDF2);
+$color-gray-3: var(--gray-3, #828282);
+
 .sign-up {
     margin-top: 148px;
     margin-left: 150px;
@@ -7,9 +14,9 @@
     width: 458px;
 
     .h2 {
-        color: var(--black, #232632);
+        color: $color-black;
         font-feature-settings: 'clig' off, 'liga' off;
-        font-family: 'Helvetica Neue';
+        font-family: $font-family;
         font-size: 40px;
         font-weight: 500;
         line-height: 48px;
@@ -29,7 +36,7 @@
         gap: 10px;
         flex-shrink: 0;
         border-radius: 10px;
-        background: var(--purple, #7B61FF);
+        background: $color-purple;
 
         .icon {
             width: 20px;
@@ -39,10 +46,10 @@
 
         .text {
             margin-left: 10px;
-            color: var(--white, #FFF);
+            color: $color-white;
             text-align: right;
             font-feature-settings: 'clig' off, 'liga' off;
-            font-family: 'Helvetica Neue';
+            font-family: $font-family;
             font-size: 20px;
             font-weight: 400;
             line-height: 32px;
@@ -92,7 +99,7 @@
             gap: 10px;
             flex-shrink: 0;
             border-radius: 10px;
-            background: var(--grey, #EBEDF2);
+            background: $color-gray;
 
             .icon {
                 width: 24px;
@@ -101,10 +108,10 @@
             }
 
             .text {
-                color: var(--black, #232632);
+                color: $color-black;
                 text-align: right;
                 font-feature-settings: 'clig' off, 'liga' off;
-                font-family: 'Helvetica Neue';
+                font-family: $font-family;
                 font-size: 20px;
                 font-weight: 400;
                 line-height: 32px;
@@ -122,7 +129,7 @@
             gap: 10px;
             flex-shrink: 0;
             border-radius: 10px;
-            background: var(--grey, #EBEDF2);
+            background: $color-gray;
 
             .icon {
                 width: 24px;
@@ -131,10 +138,10 @@
             }
 
             .text {
-                color: var(--black, #232632);
+                color: $color-black;
                 text-align: right;
                 font-feature-settings: 'clig' off, 'liga' off;
-                font-family: 'Helvetica Neue';
+                font-family: $font-family;
                 font-size: 20px;
                 font-weight: 400;
                 line-height: 32px;
@@ -151,16 +158,16 @@
         height: 22px;
 
         .text {
-            color: var(--gray-3, #828282);
+            color: $color-gray-3;
             text-align: center;
             font-variant-numeric: lining-nums proportional-nums;
-            font-family: 'Helvetica Neue';
+            font-family: $font-family;
             font-size: 14px;
             font-weight: 400;
             line-height: 22px;
 
             .part-01 {
-                color: var(--purple, #7B61FF);
+                color: $color-purple;
             }
         }
     }
