--- a/src/components/Footer/components/Copyright/Copyright.scss
+++ b/src/components/Footer/components/Copyright/Copyright.scss
@@ -1,10 +1,11 @@
+$font-lato: "Lato";
 $color-additional-dark: var(--additional-dark, #3B5266);
 
 .copyright {
     margin-top: 84px;
     margin-left: 349px;
     color: $color-additional-dark;
-    font-family: 'Lato';
+    font-family: $font-lato;
     font-size: 17px;
     font-weight: 400;
     line-height: 25px;
