--- a/src/components/Footer/components/Links/Links.scss
+++ b/src/components/Footer/components/Links/Links.scss
@@ -1,3 +1,5 @@
+$font-helvetica-neue: "Helvetica Neue";
+
 .links {
     margin-top: 191px;
     margin-left: 264px;
@@ -7,7 +9,7 @@
     word-spacing: 16.5px;
     color: #000;
     font-feature-settings: 'clig' off, 'liga' off;
-    font-family: 'Helvetica Neue';
+    font-family: $font-helvetica-neue;
     font-size: 20px;
     font-weight: 400;
     line-height: 32px;
