--- a/src/components/Footer/components/Subscribe/Subscribe.scss
+++ b/src/components/Footer/components/Subscribe/Subscribe.scss
@@ -1,3 +1,4 @@
+$font-helvetica-neue: "Helvetica Neue";
 $color-black: var(--black, #232632);
 $color-dark-2: var(--dark-2, #191B23);
 $color-gray-3: var(--gray-3, #828282);
@@ -18,7 +19,7 @@ $color-gray-3: var(--gray-3, #828282);
             height: 26px;
             color: $color-black;
             font-variant-numeric: lining-nums proportional-nums;
-            font-family: 'Helvetica Neue';
+            font-family: $font-helvetica-neue;
             font-size: 16px;
             font-weight: 700;
             line-height: 26px;
@@ -60,7 +61,7 @@ $color-gray-3: var(--gray-3, #828282);
                     align-items: center;
                     color: $color-gray-3;
                     font-variant-numeric: lining-nums proportional-nums;
-                    font-family: 'Helvetica Neue';
+                    font-family: $font-helvetica-neue;
                     font-size: 12px;
                     font-weight: 500;
                     line-height: 14px;
@@ -83,7 +84,7 @@ $color-gray-3: var(--gray-3, #828282);
                     flex: 1 0 0;
                     color: $color-dark-2;
                     font-variant-numeric: lining-nums proportional-nums;
-                    font-family: 'Helvetica Neue';
+                    font-family: $font-helvetica-neue;
                     font-size: 14px;
                     font-weight: 400;
                     line-height: 22px;
