--- a/src/components/Footer/components/Trust/Trust.scss
+++ b/src/components/Footer/components/Trust/Trust.scss
@@ -1,3 +1,4 @@
+$font-helvetica-neue: "Helvetica Neue";
 $color-gray-3: var(--gray-3, #828282);
 
 .trust {
@@ -6,7 +7,7 @@ $color-gray-3: var(--gray-3, #828282);
     display: inline-flex;
     flex-direction: row;
     gap: 29px;
-    font-family: 'Helvetica Neue';
+    font-family: $font-helvetica-neue;
     font-size: 14px;
     font-weight: 400;
     line-height: 22px;
