refactor right block

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -30,6 +30,7 @@ $color-white: var(--white, #FFF);
     }
 
     .right {
+        margin-left: 232px;
         display: inline-flex;
         flex-direction: column;
         z-index: 2;
