--- a/src/components/Footer/components/Links/Links.scss
+++ b/src/components/Footer/components/Links/Links.scss
@@ -1,16 +1,19 @@
 $font-helvetica-neue: "Helvetica Neue";
+$color-black-default: var(--black-default, #000);
 
 .links {
-    margin-top: 191px;
-    margin-left: 264px;
     display: inline-flex;
     flex-direction: row;
     width: 432px;
-    word-spacing: 16.5px;
-    color: #000;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: $font-helvetica-neue;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 32px;
+    margin-left: 16px;
+
+    .text {
+        color: $color-black-default;
+        font-feature-settings: 'clig' off, 'liga' off;
+        font-family: $font-helvetica-neue;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 32px;
+        word-spacing: 16.5px;
+    }
 }
