--- a/src/pages/Welcome/Welcome.scss
+++ b/src/pages/Welcome/Welcome.scss
@@ -1,17 +1,20 @@
 $color-black: var(--black, #232632);
 $color-white: var(--white, #FFF);
+$clamp: clamp(2%, 112px, 10%);
 
 .welcome {
-    width: 1440px;
+    width: 100%;
     height: 1460px;
     display: inline-flex;
     flex-direction: row;
+    justify-content: space-between;
     z-index: 1;
-    gap: 1px;
+    gap: $clamp;
+    overflow: hidden;
 
     .delimiter {
-        position: absolute;
-        margin-left: 720px;
+        display: flex;
+        position: relative;
         margin-top: 40px;
         height: 584px;
         width: 1px;
@@ -25,20 +28,25 @@ $color-white: var(--white, #FFF);
     }
 
     .left {
+        display: flex;
         position: relative;
+        justify-content: center;
+        margin-left: $clamp;
         height: 750px;
-        width: 720px;
+        width: 100%;
     }
 
     .right {
+        display: flex;
         position: relative;
+        justify-content: center;
         height: 750px;
-        width: 719px;
+        width: 100%;
     }
 
     .background {
-        width: 1440px;
-        height: 1440px;
+        width: 100%;
+        height: 100%;
         flex-shrink: 0;
         position: absolute;
         background: $color-white;
