--- a/src/pages/Welcome/components/BnB/BnB.scss
+++ b/src/pages/Welcome/components/BnB/BnB.scss
@@ -3,23 +3,23 @@ $color-black: var(--black, #232632);
 $color-gray-3: var(--gray-3, #828282);
 
 .bnb {
+    margin-top: 102px;
     display: inline-flex;
     flex-direction: column;
-    margin-left: 112px;
-    margin-top: 102px;
     width: 457px;
     height: 459px;
-    flex-shrink: 0;
 
     .background {
-        position: absolute;
-        width: 457px;
-        height: 459px;
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100%;
         flex-shrink: 0;
         z-index: 0;
     }
 
     .picture-background {
+        display: flex;
         position: absolute;
         width: 457px;
         height: 459px;
@@ -31,6 +31,7 @@ $color-gray-3: var(--gray-3, #828282);
     }
 
     .picture-block {
+        position: absolute;
         margin-top: 22px;
         margin-left: 74px;
         height: 306px;
