--- a/src/Application.scss
+++ b/src/Application.scss
@@ -6,16 +6,14 @@
     margin: 0;
 }
 
-body {
-    background: var(--dark-2, #191B23);
-}
+body {}
 
 h1 {
     font-family: $helveticaNeueFont;
 }
 
 h2 {
-    color: var(--white, #FFF);
+    color: var(--dark-2, #191B23);
     font-feature-settings: 'clig' off, 'liga' off;
 
     /* H2 */
@@ -23,11 +21,16 @@ h2 {
     font-size: 40px;
     font-style: normal;
     font-weight: 500;
-    line-height: 48px;
     /* 120% */
 }
 
 .thin-block-border {
     border-radius: 10px;
-    border: 1.4px solid var(--white, rgb(255, 255, 255, .2));
+    border: 1.4px solid var(--grey, #EBEDF2);
+}
+
+@media (max-width: 850px) {
+    .desktop-only {
+        display: none !important;
+    }
 }
