--- a/src/components/EthereumPrice/EthereumPrice.scss
+++ b/src/components/EthereumPrice/EthereumPrice.scss
@@ -1,27 +1,42 @@
 @import '../../variables';
 
-.ethereum-price {
-    svg {
-        margin-right: 4px;
-    }
-
+/*.ethereum-price {
     .ethereum-price-value-currency {
         //ToDO: make better
-        margin-bottom: 4px;
-        color: var(--white, #FFF);
         font-feature-settings: 'clig' off, 'liga' off;
 
         font-family: $helveticaNeueFont;
         font-style: normal;
     }
 
+    .ethereum-price-block {
+        display: flex;
+    }
+
     .ethereum-price-bottom {
-        /* text */
         font-family: Helvetica Neue;
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
-        line-height: 22px;
-        /* 157.143% */
     }
+}*/
+
+.ethereum-price {
+    display: grid;
+    grid-template-columns: min-content max-content;
+    column-gap: 4px;
+    align-items: center;
+}
+
+.ethereum-price-value-currency {
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: $helveticaNeueFont;
+    font-style: normal;
+}
+
+.ethereum-price-extra {
+    font-family: Helvetica Neue;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
 }
