Fix height right part

--- a/src/pages/Product/components/ProductSection/ProductSection.scss
+++ b/src/pages/Product/components/ProductSection/ProductSection.scss
@@ -4,6 +4,7 @@
     display: flex;
     gap: 30px;
     margin-top: 40px;
+    margin-bottom: 48px;
 }
 
 .product-section-right-part {
@@ -97,6 +98,7 @@
         margin-bottom: 24px;
         width: 100%;
         justify-content: center;
+        line-height: 22px;
 
         .ethereum-price-value-currency {
             margin-bottom: 0;
