--- a/src/pages/Product/components/PriceCard/PriceCard.scss
+++ b/src/pages/Product/components/PriceCard/PriceCard.scss
@@ -16,6 +16,7 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
+        line-height: 22px;
     }
 
     .ethereum-price-value-currency {
