Removed unless styles

--- a/src/components/EthereumPrice/EthereumPrice.scss
+++ b/src/components/EthereumPrice/EthereumPrice.scss
@@ -14,7 +14,7 @@
 }
 
 .ethereum-price-extra {
-    font-family: Helvetica Neue;
+    font-family: $helveticaNeueFont;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
