--- a/src/Application.scss
+++ b/src/Application.scss
@@ -7,24 +7,20 @@
 }
 
 h1 {
-    font-family: $helveticaNeueFont;
+    font-family: $font-helvetica-neue;
 }
 
 h2 {
-    color: var(--dark-2, #191B23);
-    font-feature-settings: 'clig' off, 'liga' off;
+    color: $dark-2-color;
 
-    /* H2 */
-    font-family: $helveticaNeueFont;
+    font-family: $font-helvetica-neue;
     font-size: 40px;
-    font-style: normal;
     font-weight: 500;
-    /* 120% */
 }
 
 .thin-block-border {
     border-radius: 10px;
-    border: 1.4px solid var(--grey, #EBEDF2);
+    border: 1.4px solid $grey-color;
 }
 
 @media (max-width: 850px) {
