--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,2 +1,9 @@
 @import "./resources/fonts/fonts";
-$helveticaNeueFont: 'Helvetica Neue';
+$font-helvetica-neue: 'Helvetica Neue';
+
+$dark-2-color: #191B23;
+$grey-3-color: #828282;
+$grey-color: #EBEDF2;
+$purple-color: #7B61FF;
+$white-color: #FFFFFF;
+$black-color: #232632;
