--- a/src/components/CollectionsHeader/CollectionsHeader.scss
+++ b/src/components/CollectionsHeader/CollectionsHeader.scss
@@ -3,6 +3,7 @@ $font-helvetica-neue: "Helvetica Neue";
 
 .collection-header-section {
     margin-top: 40px;
+    margin-bottom: 60px;
     display: flex;
     gap: 16px;
 }
