--- a/src/components/Cards/CardSmall/components/UserInfo/UserInfo.scss
+++ b/src/components/Cards/CardSmall/components/UserInfo/UserInfo.scss
@@ -1,6 +1,4 @@
-$font-helvetica-neue: "Helvetica Neue";
-$color-dark-2: var(--dark-2, #191B23);
-$color-l: var(--light-gray, lightgray 50% / cover no-repeat);
+@import "@src/variables";
 
 .user-info {
     margin-left: 25px;
