--- a/src/components/Footer/components/Copyright/Copyright.scss
+++ b/src/components/Footer/components/Copyright/Copyright.scss
@@ -1,5 +1,4 @@
-$font-lato: "Lato";
-$color-additional-dark: var(--additional-dark, #3B5266);
+@import "@src/variables";
 
 .copyright {
     text-align: end;
