--- a/src/pages/Product/components/PriceCard/PriceCard.scss
+++ b/src/pages/Product/components/PriceCard/PriceCard.scss
@@ -1,7 +1,7 @@
 @import '@src/variables';
 
 .price-card {
-    background: $grey-color;
+    background: $color-grey;
     border-radius: 10px;
     display: flex;
     padding: 24px;
