--- a/src/resources/fonts/_fonts.scss
+++ b/src/resources/fonts/_fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
     font-family: "Helvetica Neue";
-    src: local("HelveticaNeueRegular"), url("./HelveticaNeueRegular.otf") format("opentype");
+    src: local("helvetica-neue-regular"), url("./helvetica-neue-regular.otf") format("opentype");
     font-weight: 400;
 }
 
 @font-face {
     font-family: "Helvetica Neue";
-    src: local("HelveticaNeueMedium"), url("./HelveticaNeueMedium.otf") format("opentype");
+    src: local("helvetica-neue-medium"), url("./helvetica-neue-medium.otf") format("opentype");
     font-weight: 500;
 }
 
 @font-face {
     font-family: "Helvetica Neue";
-    src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.otf") format("opentype");
+    src: local("helvetica-neue-bold"), url("./helvetica-neue-bold.otf") format("opentype");
     font-weight: 700;
 }
 
 @font-face {
     font-family: "Lato";
-    src: local("LatoRegular"), url("./LatoRegular.ttf") format("truetype");
+    src: local("lato-regular"), url("./lato-regular.ttf") format("truetype");
     font-weight: 400;
 }
