--- a/src/components/Cards/CardSmall/CardSmall.scss
+++ b/src/components/Cards/CardSmall/CardSmall.scss
@@ -1,7 +1,4 @@
-$font-helvetica-neue: "Helvetica Neue";
-$color-white: var(--white, #FFF);
-$color-grey: var(--grey, #EBEDF2);
-$color-dark-2: var(--dark-2, #191B23);
+@import '@src/variables';
 
 .card-long {
     display: inline-flex;
@@ -63,7 +60,7 @@ $color-dark-2: var(--dark-2, #191B23);
         background: rgba(123, 97, 255, 0.15);
 
         .follow-text {
-            color: var(--purple, #7B61FF);
+            color: $color-purple;
             text-align: center;
             font-variant-numeric: lining-nums proportional-nums;
             font-family: $font-helvetica-neue;
