feat: added nfts middle cards

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,9 +1,15 @@
 @import "./resources/fonts/fonts";
 $font-helvetica-neue: 'Helvetica Neue';
+$font-helvetica-neue-bold: 'Helvetica Neue Bold';
 
-$dark-2-color: #191B23;
-$grey-3-color: #828282;
-$grey-color: #EBEDF2;
 $purple-color: #7B61FF;
 $white-color: #FFFFFF;
+
+//grey
+$grey-color: #EBEDF2;
+$grey-3-color: #828282;
+$grey-4-color: #646464;
+
+//black
 $black-color: #232632;
+$dark-2-color: #191B23;
