--- a/src/resources/fonts/_fonts.scss
+++ b/src/resources/fonts/_fonts.scss
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-    font-family: "Helvetica Neue";
+    font-family: "Helvetica Neue Bold";
     src: local("HelveticaNeueBold"), url("./HelveticaNeueBold.otf") format("opentype");
     font-weight: 700;
 }
