--- a/src/components/Footer/components/AboutUs/AboutUs.scss
+++ b/src/components/Footer/components/AboutUs/AboutUs.scss
@@ -7,7 +7,7 @@
     align-items: flex-start;
     gap: 24px;
 
-    .text-01 {
+    .company-overview {
         width: 444px;
         color: $color-black;
         font-feature-settings: 'clig' off, 'liga' off;
@@ -17,7 +17,7 @@
         line-height: 48px;
     }
 
-    .text-02 {
+    .company-mail {
         width: 420px;
         color: $color-black;
         font-feature-settings: 'clig' off, 'liga' off;
