Fix MR, fix import name svg

--- a/src/components/Footer/components/Copyright/Copyright.scss
+++ b/src/components/Footer/components/Copyright/Copyright.scss
@@ -3,7 +3,7 @@
 .copyright {
     text-align: end;
     margin-top: 84px;
-    color: $color-additional-dark;
+    color: $color-dark-additional;
     font-family: $font-lato;
     font-size: 17px;
     font-weight: 400;
