--- a/src/components/Footer/components/Trust/Trust.scss
+++ b/src/components/Footer/components/Trust/Trust.scss
@@ -6,11 +6,10 @@
     display: inline-flex;
     flex-direction: row;
     gap: 29px;
-    font-family: $font-helvetica-neue;
     font-size: 14px;
     font-weight: 400;
     line-height: 22px;
-    color: $color-gray-3;
+    color: $color-grey-3;
     font-variant-numeric: lining-nums proportional-nums;
 
     .text-1 {
