--- a/src/components/Footer/components/Subscribe/Subscribe.scss
+++ b/src/components/Footer/components/Subscribe/Subscribe.scss
@@ -16,7 +16,6 @@
             height: 26px;
             color: $color-black;
             font-variant-numeric: lining-nums proportional-nums;
-            font-family: $font-helvetica-neue;
             font-size: 16px;
             font-weight: 700;
             line-height: 26px;
@@ -56,9 +55,8 @@
                 .text {
                     display: flex;
                     align-items: center;
-                    color: $color-gray-3;
+                    color: $color-grey-3;
                     font-variant-numeric: lining-nums proportional-nums;
-                    font-family: $font-helvetica-neue;
                     font-size: 12px;
                     font-weight: 500;
                     line-height: 14px;
@@ -81,7 +79,6 @@
                     flex: 1 0 0;
                     color: $color-dark-2;
                     font-variant-numeric: lining-nums proportional-nums;
-                    font-family: $font-helvetica-neue;
                     font-size: 14px;
                     font-weight: 400;
                     line-height: 22px;
