--- a/src/pages/Collections/Details/Details.scss
+++ b/src/pages/Collections/Details/Details.scss
@@ -50,10 +50,10 @@
                 width: 321px;
                 height: 56px;
                 border-radius: 10px;
-                border: 2px solid $dark-2-color;
+                border: 2px solid $color-dark-2;
                 background-color: inherit;
 
-                color: $dark-2-color;
+                color: $color-dark-2;
                 text-align: center;
                 font-family: $font-helvetica-neue;
                 font-size: 16px;
@@ -65,11 +65,10 @@
                 width: 170px;
                 height: 56px;
                 border-radius: 10px;
-                background: $purple-color;
-                color: $white-color;
-                border: 0;
+                background: $color-purple;
+                color: $color-white;
 
-                color: $white-color;
+                border: 0;
                 text-align: center;
                 font-family: $font-helvetica-neue;
                 font-size: 16px;
@@ -84,7 +83,7 @@
                 border-radius: 10px;
                 width: 56px;
                 height: 56px;
-                background: $grey-color;
+                background: $color-grey;
                 border: 0;
             }
         }
@@ -93,7 +92,7 @@
             display: block;
             margin-bottom: 26px;
 
-            color: var(--dark-2, $dark-2-color);
+            color: var(--dark-2, $color-dark-2);
 
             font-family: $font-helvetica-neue;
             font-size: 14px;
@@ -107,6 +106,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+        white-space: nowrap;
 
         .details-item {
             display: flex;
@@ -114,7 +114,10 @@
             gap: 100px;
 
             span {
-                width: 131px;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 22px;
             }
         }
     }
